[tool.poetry]
name = "ioc-tracer"
version = "0.1.0"
description = ""
authors = ["bitsima <betulse42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.19"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"
requests = "^2.31.0"
python-magic = "^0.4.27"
pyexiftool = "^0.5.5"
pypdf2 = "^3.0.1"
otxv2 = "^1.5.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
